welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:7: error: not found: value T
		T(i-1)=getCouleurSol();
                ^Array1:5: error: type mismatch;
 found   : Unit
 required: Array[java.awt.Color]
	for (i <- 1 to hauteur)
               ^